updated new country

--- a/sample.yaml
+++ b/sample.yaml
@@ -5,6 +5,7 @@
   - cricket
   - hockey
   - table tennis
+  - new game
 - countries:
   - Pakistan
   - USA
@@ -13,3 +14,4 @@
   - Germany
   - France
   - Spain
+  - new country
